apps/keycloak/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
  namespace: keycloak
spec:
  parentRefs:
    - name: shared-gateway
      namespace: gateway
  hostnames:
    - keycloak.kube.it.com
  rules:
    - backendRefs:
        - name: keycloak-service
          port: 8080
